--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav.png">
+		<meta name="yandex-verification" content="7c4a6f41b54b9d11" />
+		<meta name="google-site-verification" content="BGVkVoRR2VewZHK1GRYs92VDsHaQMUdOKdU70sh3vfQ" />
 		<!-- Author Meta -->
 		<meta name="author" content="41studio">
 		<!-- Meta Description -->
