--- a/index.html
+++ b/index.html
@@ -7,17 +7,31 @@
 		<link rel="shortcut icon" href="img/fav.png">
 		<meta name="yandex-verification" content="7c4a6f41b54b9d11" />
 		<meta name="google-site-verification" content="BGVkVoRR2VewZHK1GRYs92VDsHaQMUdOKdU70sh3vfQ" />
+		<meta name="robots" content="index,follow" />
+		<meta name="copyright" content="soupbuahtaza" />
+		<meta property="og:site_name" content="https://soupbuahtaza.herokuapp.com/" />
+		<meta property="og:image" content="https://soupbuahtaza.herokuapp.com/img/og-home.jpg" />
+		<meta property="og:url" content="https://soupbuahtaza.herokuapp.com/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="soupbuahtaza | Healthy Foods & Drinks" />
+		<meta property="og:description" content="Soup Buah Taza is healthy foods and drinks restaurant. We have been serving our customer with our products since 2015." />
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@soupbuahtaza" />
+		<meta content="" property="fb:app_id" />
+		<meta content="374667376063611" property="fb:pages" />
+		<meta content="1365364024" property="fb:admins" />
 		<!-- Author Meta -->
-		<meta name="author" content="41studio">
+		<meta name="author" content="admin, admin@soupbuahtaza.com">
 		<!-- Meta Description -->
-		<meta name="description" content="Healthy Drinks & Foods">
+		<meta name="description" content="Healthy Foods & Drinks">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="healthy drinks, healthy foods, soup buah taza, juice buah taza, healthy fruits">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Healty Drinks by Soup Buah Taza</title>
+		<title>Healty Foods & Drinks by Soup Buah Taza</title>
 
+		<!-- icons -->
 		<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
